[project]
name = "project1-polyakov-oleg-m25-555"
version = "0.1.0"
description = "Text-based labyrinth game"
authors = [
    {name = "Polyakovoa",email = "polyakovoa@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
     { include = "labyrinth_game" },
 ]