[tool.poetry]
name = "project1-polyakov-oleg-m25-555"
version = "0.1.0"
description = "Text-based labyrinth game"
authors = ["Polyakovoa <polyakovoa@mail.ru>"]
readme = "README.md"

packages = [
    { include = "labyrinth_game", from = "." },
]

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
[dependency-groups]
dev = [
    "ruff (>=0.14.2,<0.15.0)"
]
